k8s/deployment.yaml
apiVersion: apps/v1
namespace: pages-mkt
kind: Deployment
metadata:
  name: landing-page-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page-container
      
        image: harbor.k8s.konneqt.cloud/konneqt-mkt/minha-lp:v1
        
        # 2. A política para usar a imagem local
        imagePullPolicy: Always
        
        ports:
        - containerPort: 8080
