k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qscim-education-landing-page-ingress
  namespace: pages-mkt
  annotations:

    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qscim-education-lp.k8s.konneqt.cloud
      secretName: qscim-education-lp-tls
  rules:
    - host: "qscim-education-lp.k8s.konneqt.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qscim-education-landing-page-service
                port:
                  number: 80
